# video-flow-analytics

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  config.toml  pyproject.toml
docs/plans/: 2026-07-06-zone-report-implementation.md  2026-07-15-split-flow-report.md  2026-07-15-split-three-packages.md  2026-07-15-split-video-analyze.md  2026-07-15-split-zone-mapping.md
docs/specs/: 2026-07-06-zone-report-design.md
flow-report/: README.md  config.toml  pyproject.toml
flow-report/src/flow_report/: config.py  main.py  pipeline.py  registry.py  stats.py
flow-report/src/flow_report/config/: constants.py
flow-report/src/flow_report/models/: config.py  registry.py
flow-report/src/flow_report/observability/: structured_logging.py
flow-report/src/flow_report/services/: report.py  stats.py
flow-report/tests/: test_config.py  test_pipeline.py  test_registry.py  test_registry_participation.py  test_stats.py
flow-report/tests/fixtures/: registry_with_participation.yaml
flow_report/: README.md  config.toml  pyproject.toml
flow_report/src/flow_report/config/: constants.py
flow_report/src/flow_report/models/: config.py
flow_report/src/flow_report/services/: stats.py
flow_report/tests/: test_config.py  test_report.py  test_stats.py
libs/vfa-observability/: README.md  pyproject.toml
libs/vfa-observability/src/vfa_observability/: __init__.py  structured_logging.py
libs/vfa-observability/tests/: test_structured_logging.py
libs/vfa-registry/: README.md  pyproject.toml
libs/vfa-registry/tests/: test_registry.py  test_registry_participation.py  test_zone_validation.py
libs/vfa-registry/tests/fixtures/: registry_with_participation.yaml
libs/vfa_observability/: README.md  pyproject.toml
libs/vfa_registry/: README.md  pyproject.toml
libs/vfa_registry/src/vfa_registry/: __init__.py  registry.py
libs/vfa_registry/tests/: test_line_validation.py  test_registry_participation.py  test_zone_validation.py
libs/vfa_registry/tests/fixtures/: registry_with_participation.yaml
line_counting/: README.md  config.toml  pyproject.toml
line_counting/src/line_counting/: main.py
line_counting/src/line_counting/config/: constants.py
line_counting/src/line_counting/models/: config.py
line_counting/src/line_counting/services/: line_map.py  stats.py
line_counting/tests/: test_config.py  test_line_map.py  test_stats.py
src/video_flow_analytics/: cli.py
src/video_flow_analytics/analyze/: detector.py  fps_meter.py  inference.py  pipeline.py  registry.py  tracker.py  tracking_results.py
src/video_flow_analytics/core/: config.py  registry.py
src/video_flow_analytics/io/: frame_ring.py  video_reader.py  video_writer.py
src/video_flow_analytics/report/: pipeline.py  stats.py
src/video_flow_analytics/visualization/: visualizer.py
src/video_flow_analytics/zone_mapping/: pipeline.py  stats.py  zones.py
tests/analyze/: test_fps_meter.py
tests/io/: test_video_reader.py
tests/report/: test_pipeline.py  test_stats.py
video-analyze/: README.md  config.toml  pyproject.toml
video-analyze/src/video_analyze/: config.py  detector.py  inference.py  pipeline.py  registry.py  tracker.py  tracking_results.py
video-analyze/src/video_analyze/io/: video_reader.py  video_writer.py
video-analyze/src/video_analyze/models/: config.py
video-analyze/src/video_analyze/services/: fps_meter.py  pipeline.py  video_writer.py
video-analyze/src/video_analyze/visualization/: visualizer.py
video-analyze/tests/: test_config.py  test_detector.py  test_fps_meter.py  test_registry.py  test_registry_participation.py  test_video_writer.py
video-analyze/tests/analyze/: test_detector.py
video-analyze/tests/io/: test_video_reader.py  test_video_writer.py
video_analyze/: README.md  config.toml  pyproject.toml
video_analyze/src/video_analyze/: main.py
video_analyze/src/video_analyze/config/: constants.py
video_analyze/src/video_analyze/services/: detector.py  inference.py  tracker.py  tracking_results.py  video_reader.py
video_analyze/tests/: test_config.py  test_fps_meter.py  test_video_reader.py  test_video_writer.py
zone-mapping/: README.md  config.toml  pyproject.toml
zone-mapping/src/zone_mapping/: config.py  pipeline.py  registry.py  stats.py
zone-mapping/src/zone_mapping/config/: constants.py
zone-mapping/src/zone_mapping/models/: config.py  registry.py
zone-mapping/src/zone_mapping/services/: stats.py  zone_map.py
zone-mapping/tests/: test_config.py  test_pipeline.py  test_registry.py  test_registry_participation.py  test_stats.py
zone_mapping/: README.md  config.toml  pyproject.toml
zone_mapping/src/zone_mapping/: main.py
zone_mapping/tests/: test_config.py  test_zone_map.py
