[project]
name = "video-flow-analytics"
version = "0.1.0"
description = "Multi-stream video flow analytics using YOLO and ByteTrack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.3",
    "polars>=1.42.0",
    "pyarrow>=17.0.0",
    "lap>=0.5.12",
]

[project.scripts]
video-flow-analytics = "video_flow_analytics.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
